--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
                 //stop form submission
                 e.preventDefault();
+                return false;
             });
 
             document.addEventListener('contextmenu', function(e) {
@@ -55,7 +56,7 @@
             });
 
             document.onkeydown = function(e) {
-                if(event.keyCode == 123) {
+                if(e.keyCode == 123) {
                     return false;
                 }
                 if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
