Adding actual newsletters

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
         <ul class="passwordProtected">
             <li>
-                <h3><span>&#127810;</span> <a href="#" target="_blank">September Newsletter</a></h3>
+                <h3><span>&#127810;</span> <a href="september_sponsor_newsletter.pdf" target="_blank">September Newsletter</a></h3>
             </li>
             <li>
-                <h3><span>❄️</span> <a href="#" target="_blank">December Newsletter</a></h3>
+                <h3><span>❄️</span> <a href="december_sponsor_newsletter.pdf" target="_blank">December Newsletter</a></h3>
             </li>
         </ul>
 
