Added new section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </form>
         </div>
 
-        <h1 class="passwordProtected"><span>&#129309;</span> Sponsor Newsletters</h1>
+        <h1 class="passwordProtected"><span>&#129309;</span> Newsletters</h1>
 
         <hr class="passwordProtected" />
 
@@ -26,6 +26,16 @@
             </li>
             <li>
                 <h3><span>❄️</span> <a href="december_sponsor_newsletter.pdf" target="_blank">December Newsletter</a></h3>
+            </li>
+        </ul>
+
+        <h1 class="passwordProtected"><span>&#9989;</span> To-Do List</h1>
+
+        <hr class="passwordProtected" />
+
+        <ul class="passwordProtected">
+            <li>
+                <h3>Coming Soon</h3>
             </li>
         </ul>
 
