Add to do items

--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
 
         <ul class="passwordProtected">
             <li>
-                <h3>Coming Soon</h3>
+                <h3><span>💎</span> <a href="https://forms.gle/ySg6yXpuzPfpBGJu7" target="_blank">Diamond</a></h3>
+            </li>
+            <li>
+                <h3><span>🥇</span> <a href="https://forms.gle/uPHt7pdBUTAgXwZ56" target="_blank">Gold</a></h3>
+            </li>
+            <li>
+                <h3><span>🥈</span> <a href="https://forms.gle/yU7YazBkSwDV5yuu5" target="_blank">Silver</a></h3>
+            </li>
+            <li>
+                <h3><span>🥉</span> <a href="https://forms.gle/wK55ABc4GZDi3uRf8" target="_blank">Bronze</a></h3>
             </li>
         </ul>
 
