Add February newsletterl link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li>
                 <h3><span>❄️</span> <a href="december_sponsor_newsletter.pdf" target="_blank">December Newsletter</a></h3>
             </li>
+            <li>
+                <h3><span>💖</span> <a href="February_newsletter.pdf" target="_blank">Febrary Newsletter</a></h3>
+            </li>
         </ul>
 
         <h1 class="passwordProtected"><span>&#9989;</span> To-Do Google Forms</h1>
