--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav main-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link page-switch" href="#todopage">ToDo</a>
+                            <a class="nav-link page-switch" data-toggle="collapse" data-target="#navbarNav" href="#todopage">ToDo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-switch" href="#faqpage">FAQ</a>
+                            <a class="nav-link page-switch" data-toggle="collapse" data-target="#navbarNav" href="#faqpage">FAQ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-switch" href="#newsletterspage">Newsletters</a>
+                            <a class="nav-link page-switch" data-toggle="collapse" data-target="#navbarNav" href="#newsletterspage">Newsletters</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-switch" href="#resumespage">Resumes</a>
+                            <a class="nav-link page-switch" data-toggle="collapse" data-target="#navbarNav" href="#resumespage">Resumes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-switch" href="#sponsorspage">Sponsors</a>
+                            <a class="nav-link page-switch" data-toggle="collapse" data-target="#navbarNav" href="#sponsorspage">Sponsors</a>
                         </li>
                     </ul>
                 </div>
