Add sponsor logos without links

--- a/index.html
+++ b/index.html
@@ -153,6 +153,131 @@
             <div>
                 <h1 class="section-title">Sponsors</h1>
                 <h2 class="subtitle">A huge thank you to ALL of our past and current sponsors.</h2>
+                <div class="sponsor-logos">
+                    <a href="#">
+                        <img src="images/1904labs.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Accenture.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Allscripts.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/AT&T.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Balto.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Bayer.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Cboe.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Centene.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Cigna.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/CrowdStrike.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Edward Jones.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Emerson.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Enterprise Holdings.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Express Scripts.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Gainsight.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/GitHub.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Honeywell.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/JB Hunt.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/John Deere.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Leonardo DRS.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Linode.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Mastercard.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Mixmax.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Nestle.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/NISC.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Numerify.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Oasis Digital.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Panera.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Platter.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Rolls-Royce.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Sandia.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/SDP.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Slalom.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Spectrum.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/St. Louis Cardinals.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/StateFarm.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Tradebot.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Union Pacific.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Veterans United.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/WWT.png" />
+                    </a>
+                    <a href="#">
+                        <img src="images/Xpring.png" />
+                    </a>
+                </div>
             </div>
         </div>
 
