--- a/index.html
+++ b/index.html
@@ -89,31 +89,138 @@
                 <div class="faqs accordian" id="faqs-accordian">
                     <div data-toggle="collapse" data-target="#answer1" aria-expanded="false" aria-controls="answer1">
                         <div>
-                            <span class="question">What does mentorship entail?</span><i class="fas fa-rotate-270 fa-play"></i>
+                            <span class="question">What payment options are there?</span><i class="fas fa-rotate-270 fa-play"></i>
                         </div>
                         <div class="collapse" id="answer1" aria-labelledby="answer1">
                             <div class="body">
-                                We would like all our sponsors to arrive 1-2 hours before general check-in. Our expectation is to have all sponsors ready to greet hackers at 4pm.
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>We have 2 payment options. Option # 1 is sending a check.  Option #2 is using a credit card/debit card through our Missouri S&T ACM Stripe account. However, this option includes an additional transaction fee of 2.2% + 30 cents.</li>
+                                </ul>
                             </div>                        
                         </div>
                     </div>
                     <div data-toggle="collapse" data-target="#answer2" aria-expanded="false" aria-controls="answer2">
                         <div>
-                            <span class="question">What does judging entail?</span><i class="fas fa-rotate-270 fa-play"></i>
+                            <span class="question">What does mentorship look like? Do mentors have to stay the entire time?</span><i class="fas fa-rotate-270 fa-play"></i>
                         </div>
                         <div class="collapse" id="answer2" aria-labelledby="answer2">
                             <div class="body">
-                                We would like all our sponsors to arrive 1-2 hours before general check-in. Our expectation is to have all sponsors ready to greet hackers at 4pm.
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>Mentorship can look like a lot of things, but the only thing we ask of you is to not do the project for them. We want to encourage learning and growth. Teach them about a concept they might not fully understand or help them get past a road block they're having!</li>
+                                    <li>Building a project has two major components:</li>
+                                    <ul style="list-style: disc">
+                                        <li>The first being the actual development of the project. More technical mentors will thrive in this area.</li>
+                                        <li>The second part is the preparation for demoing, which can make or break even the best project.  More business driven mentors will find this to be their area of expertise.</li>
+                                    </ul>
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div data-toggle="collapse" data-target="#answer3" aria-expanded="false" aria-controls="answer3">
                         <div>
-                            <span class="question">How early do I need to be at the venue?</span><i class="fas fa-rotate-270 fa-play"></i>
+                            <span class="question">How does judging work?</span><i class="fas fa-rotate-270 fa-play"></i>
                         </div>
                         <div class="collapse" id="answer3" aria-labelledby="answer3">
                             <div class="body">
-                                We would like all our sponsors to arrive 1-2 hours before general check-in. Our expectation is to have all sponsors ready to greet hackers at 4pm.
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>Groups of judges will visit a list of teams, similar to a science fair, and score/rank those projects using a scorecard.  We will then collect those scorecards and tally the results.  Pending time constraints, the top X number of teams will give a final demo during closing ceremonies and winners will be revealed.*</li>
+                                    <li>*This might seem vague, and it is meant to be.  Not everything will be solidified until much closer to the time of judging once we have total numbers of judges and projects.  Judges will be briefed the morning of with exact assignments and instructions.</li>
+                                    <li>For sponsors with a custom prompt: You will be responsible for judging those who tag their projects with your prompt.  Don't worry we will help make sure you know who they are and where they are!  These will also be announced during closing ceremonies!</li>
+                                </ul>
+                            </div>                        
+                        </div>
+                    </div>
+                    <div data-toggle="collapse" data-target="#answer4" aria-expanded="false" aria-controls="answer4">
+                        <div>
+                            <span class="question">When do we need to be there by?</span><i class="fas fa-rotate-270 fa-play"></i>
+                        </div>
+                        <div class="collapse" id="answer4" aria-labelledby="answer4">
+                            <div class="body">
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>Please be at the venue 1-2 hours before check-in opens to give you ample amount of time to set up. Right after checkin in is a popular time for students/hackers to go around and meet the sponsors at their booths.</li>
+                                </ul>
+                            </div>                        
+                        </div>
+                    </div>
+                    <div data-toggle="collapse" data-target="#answer5" aria-expanded="false" aria-controls="answer5">
+                        <div>
+                            <span class="question">How long should we be at the booth/venue?</span><i class="fas fa-rotate-270 fa-play"></i>
+                        </div>
+                        <div class="collapse" id="answer5" aria-labelledby="answer5">
+                            <div class="body">
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>There are ideal times to be at your booth: mini career fair, before and after events, and meals (passing periods)</li>
+                                    <li>We definitely encourage you go out and meet the students where they're working too.  Members of our team will also be available throughout the weekend to help connect teams to sponsors.</li>
+                                </ul>
+                            </div>                        
+                        </div>
+                    </div>
+                    <div data-toggle="collapse" data-target="#answer6" aria-expanded="false" aria-controls="answer6">
+                        <div>
+                            <span class="question">What is swag? How much should we bring?</span><i class="fas fa-rotate-270 fa-play"></i>
+                        </div>
+                        <div class="collapse" id="answer6" aria-labelledby="answer6">
+                            <div class="body">
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>Swag can be all sorts of things: shirts, stickers, water bottles, bags, etc.</li>
+                                    <li>Some advice we have to offer in this area: quality over quantity is huge.  Students are much more likely to use / showcase one item of great use than a bunch of items that might not be the most useful.</li>
+                                    <ul style="list-style: disc">
+                                        <li>A great example of this last year was from Software Design Partners, who gave out shirts that we see students wearing in our classes to this day.</li>
+                                    </ul>
+                                </ul>
+                            </div>                        
+                        </div>
+                    </div>
+                    <div data-toggle="collapse" data-target="#answer7" aria-expanded="false" aria-controls="answer7">
+                        <div>
+                            <span class="question">What is a custom prize?</span><i class="fas fa-rotate-270 fa-play"></i>
+                        </div>
+                        <div class="collapse" id="answer7" aria-labelledby="answer7">
+                            <div class="body">
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>A custom prize is an opportunity for sponsors (Silver Tier+) to bring their own prompt that students can submit their projects to. These prompts can range from using certain tools and/or building certain projects.</li>
+                                    <li>An example of our favorite examples of a custom prompt in the past was Panera offering internships to the team with "Best Nutrition Hack", a project relating to nutrition and fitness.</li>
+                                    <li>To find more examples, check out our devpost from 2019: <br>https://pickhacks.devpost.com/</li>
+                                </ul>
+                            </div>                        
+                        </div>
+                    </div>
+                    <div data-toggle="collapse" data-target="#answer8" aria-expanded="false" aria-controls="answer8">
+                        <div>
+                            <span class="question">What is a mini event?</span><i class="fas fa-rotate-270 fa-play"></i>
+                        </div>
+                        <div class="collapse" id="answer8" aria-labelledby="answer8">
+                            <div class="body">
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>A mini event is a perk of sponsors (Gold Tier+), who have the opportunity to host a 1-hour event of their choosing. Examples of past mini events include: tech talks, workshops, panels, games, etc.</li>
+                                </ul>
+                            </div>                        
+                        </div>
+                    </div>
+                    <div data-toggle="collapse" data-target="#answer9" aria-expanded="false" aria-controls="answer9">
+                        <div>
+                            <span class="question">What is the dress code / is there one?</span><i class="fas fa-rotate-270 fa-play"></i>
+                        </div>
+                        <div class="collapse" id="answer9" aria-labelledby="answer9">
+                            <div class="body">
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>There is no official dress code.  All we ask is that you are presentable :).  People typically wear jeans and a company shirt!</li>
+                                </ul>
+                            </div>                        
+                        </div>
+                    </div>
+                    <div data-toggle="collapse" data-target="#answer10" aria-expanded="false" aria-controls="answer10">
+                        <div>
+                            <span class="question">What should our social media posts look like? / Time frame it'll go out </span><i class="fas fa-rotate-270 fa-play"></i>
+                        </div>
+                        <div class="collapse" id="answer10" aria-labelledby="answer10">
+                            <div class="body">
+                                <ul style="list-style: none; padding: 0;">
+                                    <li>You can check out all of our previous social media posts at @sandtpickhacks!  They typically get published 2-3 weeks before the event!</li>
+                                    <ul style="list-style: disc">
+                                        <li>Things we need: custom small blurb, photos, and an optional short clip!</li>
+                                    </ul>
+                                </ul>
                             </div>                        
                         </div>
                     </div>
@@ -285,11 +392,11 @@
         <script>
             var passwordCorrect = false;
 
-            while(!passwordCorrect) {
-                var hashedPassword = SHA512(prompt("Please enter the password"));
+            // while(!passwordCorrect) {
+            //     var hashedPassword = SHA512(prompt("Please enter the password"));
 
-                passwordCorrect = (hashedPassword === "1d37c58b590d1f560393ce80a834d58f938a2e327238678dd8a67dda4632241a59385c4a7a4fcadc14507477ad88b9f4bc43a13e7e86dca77950d7c88e8565c0");
-            }
+            //     passwordCorrect = (hashedPassword === "1d37c58b590d1f560393ce80a834d58f938a2e327238678dd8a67dda4632241a59385c4a7a4fcadc14507477ad88b9f4bc43a13e7e86dca77950d7c88e8565c0");
+            // }
 
             /*
             * Secure Hash Algorithm (SHA512)
