Add partner logos

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
             </div>
         </nav>
 
-        <div id="mainpage" class="passwordProtected">
+        <div id="mainpage">
             <div>
                 <h1></h1>
                 <h2>days</h2>
                 <h3>till the best ever PickHacks!</h3>
             </div>
         </div>
-        <div id="todopage" class="passwordProtected">
+        <div id="todopage">
             <div>
                 <h1 class="section-title">ToDo</h1>
                 <h2 class="subtitle">Please fill out the Google Form that matches your sponsorship!</h3>
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div id="faqpage" class="passwordProtected">
+        <div id="faqpage">
             <div>
                 <h1 class="section-title">FAQ</h1>
                 <div class="faqs accordian" id="faqs-accordian">
@@ -227,7 +227,7 @@
                 </div>
             </div>
         </div>
-        <div id="newsletterspage" class="passwordProtected">
+        <div id="newsletterspage">
             <div>
                 <h1 class="section-title">Newsletters</h1>
                 <h2 class="subtitle">In an effort to provide transparency to our sponsors, we will publish a newsletter of our progress every couple of months</h2>
@@ -244,7 +244,7 @@
                 </div>
             </div>
         </div>
-        <div id="resumespage" class="passwordProtected">
+        <div id="resumespage">
             <div>
                 <h1 class="section-title">Resumes</h1>
                 <h2 class="subtitle">All PH 2020 sponsors will have access to our attendee resume database until June.</h2>
@@ -256,134 +256,81 @@
                 </p>
             </div>
         </div>
-        <div id="sponsorspage" class="passwordProtected">
+        <div id="sponsorspage">
             <div>
                 <h1 class="section-title">Sponsors</h1>
                 <h2 class="subtitle">A huge thank you to ALL of our past and current sponsors.</h2>
                 <div class="sponsor-logos">
-                    <a href="#">
-                        <img src="images/1904labs.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Accenture.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Allscripts.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/AT&T.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Balto.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Bayer.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Cboe.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Centene.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Cigna.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/CrowdStrike.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Edward Jones.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Emerson.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Enterprise Holdings.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Express Scripts.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Gainsight.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/GitHub.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Honeywell.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/JB Hunt.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/John Deere.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Leonardo DRS.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Linode.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Mastercard.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Mixmax.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Nestle.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/NISC.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Numerify.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Oasis Digital.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Panera.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Platter.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Rolls-Royce.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Sandia.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/SDP.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Slalom.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Spectrum.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/St. Louis Cardinals.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/StateFarm.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Tradebot.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Union Pacific.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Veterans United.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/WWT.png" />
-                    </a>
-                    <a href="#">
-                        <img src="images/Xpring.png" />
-                    </a>
+                    <img src="images/1904labs.png" />
+                    <img src="images/Accenture.png" />
+                    <img src="images/Allscripts.png" />
+                    <img src="images/AT&T.png" />
+                    <img src="images/Balto.png" />
+                    <img src="images/Bayer.png" />
+                    <img src="images/Cboe.png" />
+                    <img src="images/Centene.png" />
+                    <img src="images/Cigna.png" />
+                    <img src="images/CrowdStrike.png" />
+                    <img src="images/Edward Jones.png" />
+                    <img src="images/Emerson.png" />
+                    <img src="images/Enterprise Holdings.png" />
+                    <img src="images/Express Scripts.png" />
+                    <img src="images/Gainsight.png" />
+                    <img src="images/GitHub.png" />
+                    <img src="images/Honeywell.png" />
+                    <img src="images/JB Hunt.png" />
+                    <img src="images/John Deere.png" />
+                    <img src="images/Leonardo DRS.png" />
+                    <img src="images/Linode.png" />
+                    <img src="images/Mastercard.png" />
+                    <img src="images/Mixmax.png" />
+                    <img src="images/Nestle.png" />
+                    <img src="images/NISC.png" />
+                    <img src="images/Numerify.png" />
+                    <img src="images/Oasis Digital.png" />
+                    <img src="images/Panera.png" />
+                    <img src="images/Platter.png" />
+                    <img src="images/Rolls-Royce.png" />
+                    <img src="images/Sandia.png" />
+                    <img src="images/SDP.png" />
+                    <img src="images/Slalom.png" />
+                    <img src="images/Spectrum.png" />
+                    <img src="images/St. Louis Cardinals.png" />
+                    <img src="images/StateFarm.png" />
+                    <img src="images/Tradebot.png" />
+                    <img src="images/Union Pacific.png" />
+                    <img src="images/Veterans United.png" />
+                    <img src="images/WWT.png" />
+                    <img src="images/Xpring.png" />
+                </div>
+                <h1 class="section-title" style="margin-top: 3rem; margin-bottom: 2rem;">Partners</h1>
+                <div style="width: 100%; display: flex;">
+                    <img src="images/umsystem.png" style="margin: 0 auto 1rem auto; max-width: 100%" />
+                </div>
+                <div class="sponsor-logos">
+                    <img src="images/techdomains.png" />
+                    <img src="images/1517.png" />
+                    <img src="images/acm.png" />
+                    <img src="images/acmw.png" />
+                    <img src="images/aws.png" />
+                    <img src="images/brewerscience.png" />
+                    <img src="images/do.png" />
+                    <img src="images/girlscode.png" />
+                    <img src="images/goodsnacks.png" />
+                    <img src="images/highalpha.png" />
+                    <img src="images/jetbrains.png" />
+                    <img src="images/jumpstart.png" />
+                    <img src="images/mlh.png" />
+                    <img src="images/monster.png" />
+                    <img src="images/redbull.png" />
+                    <img src="images/sketch.png" />
+                    <img src="images/smashmallow.png" />
+                    <img src="images/sportradar.png" />
+                    <img src="images/stickermule.png" />
+                    <img src="images/stlpr.png" />
+                    <img src="images/voiceflow.png" />
+                    <img src="images/wolfram.png" />
+                    <img src="images/zesttea.png" />
                 </div>
             </div>
         </div>
@@ -392,11 +339,11 @@
         <script>
             var passwordCorrect = false;
 
-            // while(!passwordCorrect) {
-            //     var hashedPassword = SHA512(prompt("Please enter the password"));
+            while(!passwordCorrect) {
+                var hashedPassword = SHA512(prompt("Please enter the password"));
 
-            //     passwordCorrect = (hashedPassword === "1d37c58b590d1f560393ce80a834d58f938a2e327238678dd8a67dda4632241a59385c4a7a4fcadc14507477ad88b9f4bc43a13e7e86dca77950d7c88e8565c0");
-            // }
+                passwordCorrect = (hashedPassword === "1d37c58b590d1f560393ce80a834d58f938a2e327238678dd8a67dda4632241a59385c4a7a4fcadc14507477ad88b9f4bc43a13e7e86dca77950d7c88e8565c0");
+            }
 
             /*
             * Secure Hash Algorithm (SHA512)
